--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       # (e.g., http://192.168.1.5, http://10.0.0.15, http://172.16.0.20, etc.)
       - METICULOUS_API_URL=http://192.168.4.8
     healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request, sys; try: urllib.request.urlopen('http://localhost:8080/'); sys.exit(0); except Exception as e: sys.exit(0 if 'HTTP Error' in str(e) else 1)"]
+      test: ["CMD", "python3", "-c", "exec(\"import urllib.request, sys\\ntry: urllib.request.urlopen('http://localhost:8080/')\\nexcept Exception as e: sys.exit(0 if 'HTTP Error' in str(e) else 1)\")"]
       interval: 10s
       timeout: 5s
       retries: 5
